# ai-trading-system

./: README.md
.github/workflows/: hft_engine.yml
hft_engine/: CMakeLists.txt  README.md
hft_engine/config/: engine.conf
hft_engine/include/: AtomicDouble.h  Benchmark.h  FPGAInterface.h  HardwareOptimizer.h  LockFreeQueue.h  ObjectPool.h  OrderBook.h  TradingEngine.h  Types.h
hft_engine/src/: OrderBook.cpp  TradingEngine.cpp
hft_engine/tests/: CMakeLists.txt  bench_smoke.cpp  test_lockfree_queue.cpp  test_matching_logic.cpp  test_object_pool.cpp  test_order_book.cpp  test_order_ops.cpp
scientific_backtest_engine/: __init__.py  requirements.txt
scientific_backtest_engine/analysis/: overfitting_test.py  performance_analyzer.py  robustness.py
scientific_backtest_engine/config/: settings.py
scientific_backtest_engine/core/: backtest_engine.py  walk_forward.py
scientific_backtest_engine/data/: data_processor.py
scientific_backtest_engine/data/gans/: financial_gan.py  stress_test.py
scientific_backtest_engine/tests/: conftest.py  test_analysis.py  test_backtest.py  test_gan.py
scientific_backtest_engine/utils/: metrics.py  optimizers.py
